--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,9 +29,17 @@
   box-sizing: border-box;
 }
 
+html {
+  zoom: 1;
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
 html, body, #root {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 body {
